--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 
 add_compile_options(-O2 -Wall -Wextra)
 add_link_options(-lpthread)
+# add_link_options(-lmath)
 
 add_executable(NC src/newtonForward.cpp)
