--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 add_compile_options(-O2 -Wall -Wextra)
 add_link_options(-lpthread)
 
-add_executable(NC src/newtonBackward.cpp)
+add_executable(NC src/newtonCentral.cpp)
